tes untuk mengecek repo

--- a/public/css/components-css/hero.css
+++ b/public/css/components-css/hero.css
@@ -62,7 +62,7 @@
     top: 50%;
     transform: translateY(-50%);
     background-color: rgba(0, 0, 0, 0);
-    color: #fff;
+    color: #bababa;
     border: none;
     padding: 10px 18px;
     font-size: 1.5rem;
