--- a/public/css/admin-css/admin-faq.css
+++ b/public/css/admin-css/admin-faq.css
@@ -101,9 +101,9 @@
     background-color: #f6f6f6;
     padding: 12px 18px;
     display: flex;
-    justify-content: flex-end; /* tombol di kanan */
+    justify-content: flex-end; 
     align-items: center;
-    gap: 10px; /* jarak antar tombol */
+    gap: 10px; 
 }
 
 .category-header h3 {
@@ -111,7 +111,7 @@
     font-size: 18px;
     font-weight: 600;
     color: #2c3e50;
-    flex-grow: 1; /* h3 tetap di kiri, tombol rapat di kanan */
+    flex-grow: 1; 
 }
 
 /* Tombol Edit Category */
