--- a/public/css/components-css/navbar.css
+++ b/public/css/components-css/navbar.css
@@ -17,7 +17,7 @@
     width: 100%;
     max-width: 1200px;
     display: flex;
-    justify-content: space-between; /* logo kiri, menu tengah, actions kanan */
+    justify-content: space-between; 
     align-items: center;
 }
 
